(executables
 (modes native byte)
 (names Examples)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (package Revery)
 (public_names Examples)
 (ocamlc_flags
  (:standard -custom))
 (libraries dynlink ExampleStubs skia str Revery Revery_Lwt flex timber))

(install
 (section bin)
 (package Revery)
 (files Info.plist Roboto-Regular.ttf Roboto-RegularItalic.ttf
   Roboto-Bold.ttf FontAwesome5FreeSolid.otf binary.dat outrun-logo.png
   outrun-icon.png revery-icon.png))
