(library
    (name Revery_Native)
    (public_name Revery.Native)
    (preprocess (pps brisk-reconciler.ppx lwt_ppx))
    (library_flags (:include flags.sexp))
    (js_of_ocaml (javascript_files dialog.js))
    (c_names dialog dialog_cocoa dialog_win32 dialog_gtk menu menu_win32)
    (c_flags :standard -Wall -Wextra -Werror (:include c_flags.sexp))
    (c_library_flags (:include c_library_flags.sexp))
    (libraries brisk-reconciler sdl2))

(rule
(targets flags.sexp c_flags.sexp c_library_flags.sexp)
(deps (:discover config/discover.exe))
(action (run %{discover})))
